crates/webtau-macros/tests/compile-fail/non_ref_state.stderr
error: #[command] first parameter must be a reference: `&T` or `&mut T`
 --> tests/compile-fail/non_ref_state.rs:9:16
  |
9 | fn tick(state: MyState) -> View {
  |                ^^^^^^^
